--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -2,7 +2,7 @@
 	<html>
 		<head>
 			<title>Trinity IN-HOUSE</title>
-			<link rel="stylesheet" type="text/css" href="css/main.css"
+			<link rel="stylesheet" type="text/css" href="css/main.css">
 		</head>
 		<body>
 			<h1>TRINITY</h1>
