--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -7,10 +7,19 @@
 <body>
 
 	<h1>TRINITY</h1>
-	<h3 id="slogan">Challenge everything.</h3>
-	<p class="center">
-		<img src="images/image1.jpg" height="300" alt="Trinity is Fashion" title="Trinity Fashion" align=middle>
-	</p>
+	<h3 id="tools">Choose from the following:</h3>
+	<div class="images">
+		<div href"http://www.google.com">
+			<img src="images/logistics.png" alt="logistics" title="Logistics" >
+			<p>Shipping</p>
+		</div>
+		<div href"http://www.google.com">
+			<img src="images/manual.png" height="" alt="MANUAL" title="MANUAL">
+		</div>
+		<div href"http://www.google.com">
+			<img src="images/po.png" height="" alt="Orders" title="Orders"><p>PO's</p>
+		</div>
+	</div>
 	<p id="information">
 		We are the best of the best of the best of the best of the best of the best of the best of the best at what we do.<br>
 		We specialize in being the best of the best of the best of the best of the best of the best of the best in making stuff.
