--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -4,19 +4,19 @@
 	<title>TRINITY</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
-<body>
+<body background="images/background.png">
 
 	<h1>TRINITY</h1>
-	<h3 id="tools">Choose from the following:</h3>
-	<div class="images">
-		<div href"http://www.google.com">
-			<img src="images/logistics.png" alt="logistics" title="Logistics" >
-			<p>Shipping</p>
-		</div>
-		<div href"http://www.google.com">
-			<img src="images/po.png" height="" alt="Orders" title="Orders"><p>PO's</p>
-		</div>
-	</div>
+	<h3 id="tools">Choose from the following:</h3>		
+		<p>
+			<div class="menu"><a href="www.google.com">SHIPPING</a></div>
+		</p>
+		<p>
+			<div class="menu"><a href="www.google.com">PO's</a></div>
+		</p>
+		<p>
+			<div class="menu"><a href="www.google.com">SEARCH</a></div>
+		</p>
 	<p id="information">
 		We are the best of the best of the best of the best of the best of the best of the best of the best at what we do.<br>
 		We specialize in being the best of the best of the best of the best of the best of the best of the best in making stuff.
